--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <script src="./chapter/core/06.typeConversion.js"></script>
+  <script defer src="lab_study/02.과제.js"></script>
   <title>Document</title>
 </head>
 <body>
 
   <h1>
-    <span>hello</span>
-    <span>world</span>
+    <span class="first">hello</span>
+    <span class="second">world</span>
   </h1>
   
 </body>
